<resources>
    <string name="app_name">Alpaca</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_perpustakaan">Perpustakaan</string>
    <string name="title_pengaturan">Pengaturan</string>
    <string name="title_koleksi_bacaan">Koleksi Bacaan</string>
    <string name="title_edukasi">Edukasi</string>
    <string name="content_description_fab_action">Memindai gambar</string>
    <string name="content_description_fab_gallery">Pilih dari galeri</string>
    <string name="content_description_fab_camera">Pilih dari kamera</string>
    <string name="content_description_illustration_no_collection">Ilustrasi bahwa tidak ada koleksi tersedia</string>
    <string name="content_description_word_game">Ilustrasi seseorang menunjuk sebuah kata</string>
    <string name="content_description_item_book_cover">Cover buku</string>
    <string name="content_description_camera_shutter">Tombol shutter kamera</string>
    <string name="content_description_camera_frame">Frame kamera</string>
    <string name="info_no_collection_message_headline">Belum Ada Koleksi</string>
    <string name="info_no_collection_message_body">Silakan tambah koleksi buku melalui menu berikut</string>
    <string name="dummy_collection_title">Angin Utara dan Matahari</string>
    <string name="dummy_collection_date">Dipindai: 5 Mei 2022</string>
    <string name="dummy_flashcard_body">Penderita disleksia akan kesulitan dalam mengidentifikasi kata-kata yang diucapkan dan mengubahnya menjadi huruf atau kalimat.</string>
    <string name="profil_pengguna">Profil pengguna</string>
    <string name="clicked">Clicked</string>
    <string name="pindai_gambar">Pindai Gambar</string>
    <string name="select_story">Pilih Cerita</string>
    <string name="pilih_dari_galeri">Pilih Dari Galeri</string>
    <string name="disleksia">Disleksia</string>
    <string name="susun_kata">Susun Kata</string>
    <string name="card_word_games_description">Permainan susun kata sebagai bahan latihan membaca</string>
    <string name="camera_error_message">Gagal memunculkan kamera</string>
    <string name="error_message_no_permission_camera">Tidak Ada Akses Kamera</string>
    <string name="error_message_no_permission_camera_body">Aktifkan izin akses kamera untuk menjalankan fitur ini</string>
    <string name="izinkan">Izinkan</string>
    <string name="izin_ditolak">Izin ditolak</string>
    <string name="dialog_no_permission_message">Izin untuk aplikasi menggunakan kamera telah ditolak, hal ini menyebabkan kamu tidak dapat mengakses fitur ini.</string>
    <string name="dialog_positive_button">Mengerti</string>
    <string name="desc_alpaca_logo">Alpaca logo</string>
    <string name="welcome">Selamat Datang</string>
    <string name="login_to_continue">Masuk untuk melanjutkan</string>
    <string name="label_email">Email</string>
    <string name="label_password">Kata sandi</string>
    <string name="label_login">Masuk</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="no_account_ready">Belum memiliki akun?</string>
    <string name="label_registration">Daftar</string>
    <string name="create_to_access">Buat akun baru untuk mengakses Alpaca</string>
    <string name="label_name">Nama lengkap</string>
    <string name="account_ready">Sudah memiliki akun?</string>
    <string name="find_account">Temukan akun anda</string>
    <string name="input_your_email_to_find">Masukkan alamat email yang terhubung dengan akun Alpaca</string>
    <string name="label_process">Proses</string>
    <string name="camera_message">Arahkan kamera pada tulisan, pastikan seluruh tulisan terbaca dengan jelas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memproses_gambar">Memproses Gambar</string>
    <string name="loading_processing_info">Gambar kamu sedang diproses menjadi teks, proses ini berlangsung dalam 1 menit</string>
    <string name="batalkan">Batalkan</string>
    <string name="simpan_catatan">Simpan Catatan</string>
    <string name="judul">Judul</string>
    <string name="hasil_pemindaian">Hasil Pemindaian</string>
    <string name="dummy_text">Cerita Pendek atau biasa disingkat cerpen adalah salah satu jenis prosa yang isi ceritanya bukan kejadian nyata dan hanya dibuat-buat. Jumlah kata di dalam cerita pendek tidak lebih dari 10.000 kata. Penulisan cerita pendek menggunakan gaya bahasa yang naratif</string>
    <string name="helper_scan_result">*Anda dapat melakukan penyesuaian sebelum menyimpan cerita</string>
    <string name="label_settings">Pengaturan</string>
    <string name="label_profile">Profil</string>
    <string name="user_profile">Profil Pengguna</string>
    <string name="text_customisation">Kustomisasi Teks</string>
    <string name="label_logout">Keluar</string>
    <string name="label_application">Aplikasi</string>
    <string name="about_apps">Tentang Aplikasi</string>
    <string name="privacy_terms">Ketentuan Privasi</string>
    <string name="user_terms">Ketentuan Pengguna</string>
    <string name="switch_information">Ganti informasi</string>
    <string name="privacy_information">Informasi Pribadi</string>
    <string name="security">Keamanan</string>
    <string name="label_current_password">Kata sandi saat ini*</string>
    <string name="label_new_password">Kata sandi baru*</string>
    <string name="label_confirm_password">Konfirmasi kata sandi baru*</string>
    <string name="note_edit_profile">*Abaikan jika tidak ingin mengubah password</string>
    <string name="save">Simpan</string>
    <string name="label_library">Perpustakaan</string>
    <string name="search">Search</string>
    <string name="new_collection">Koleksi terbaru</string>
    <string name="desc_story_cover">Cover cerita</string>
    <string name="search_result">Hasil pencarian: %d</string>
    <string name="desc_not_found">Pencarian tidak ditemukan</string>
    <string name="result_not_found1">Tidak ditemukan hasil</string>
    <string name="result_not_found2">Pencarian cerita dengan judul “%s” tidak ditemukan</string>
    <string name="dummy_story_title">Asal Usul Danau Toba</string>
    <string name="dummy_story_desc">Toba merupakan seorang petani yang banyak menghabiskan waktu di sawah. Sesekali dia juga senang untuk pergi memancing ikan untuk dimakan</string>
    <string name="dummy_author_story">Anonim</string>
    <string name="error_empty_email">Email tidak boleh kosong</string>
    <string name="error_email_format">Format email harus benar</string>
    <string name="error_empty_password">Kata sandi tidak boleh kosong</string>
    <string name="dummy_email">gunawan.jeri25@gmail.com</string>
    <string name="error_empty_name">Nama tidak boleh kosong</string>
    <string name="really_logout">Yakin untuk keluar?</string>
    <string name="remove_session_message">Sesi akun anda akan dihapus, dan anda perlu login kembali untuk menggunakan aplikasi ini</string>
    <string name="label_cancel">Batal</string>
    <string name="dummy_password">adminadmin</string>
    <string name="loading">Memuat…</string>
    <string name="error_lenght_password">Kata sandi minimal 6 karakter</string>
    <string name="password_reset_link">Password reset link successfully sent to your email</string>
    <string name="feature_not_ready">Feature not ready</string>
    <string name="customization">Kustomisasi</string>
    <string name="background">Latar Belakang</string>
    <string name="alignment">Alignment</string>
    <string name="left">Kiri</string>
    <string name="lexia_readable">Lexia Readable</string>
    <string name="font_style">Font Style</string>
    <string name="line_height">Line Height</string>
    <string name="_2">2</string>
    <string name="ukuran_teks">Ukuran Teks</string>
    <string name="_20px">20px</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="_plus_2">+2</string>
    <string name="arrow_down">Arrow down</string>
    <string name="label_account">Akun</string>
    <string name="change_password">Ganti kata sandi</string>
    <string name="change">Ganti</string>
    <string name="save_update">Simpan perubahan</string>
    <string name="password_confirmation">Masukkan kata sandi untuk konfirmasi</string>
    <string name="no_change">No changes</string>
    <string name="password_not_match">Konfirmasi kata sandi tidak cocok</string>
    <string name="same_password">Masukkan kata sandi baru</string>
    <string name="error_empty_confirm_password">Konfirmasi tidak boleh kosong</string>
    <string name="saved">Saved</string>
    <string name="success_change_password">Password changed successfully</string>
    <string name="pixel_suffix">%dpx</string>
    <string name="prefix_plus">+%d</string>
    <string name="center">Tengah</string>
    <string name="right">Kanan</string>
    <string name="white">Putih</string>
    <string name="yellow">Kuning</string>
    <string name="blue">Biru</string>
    <string name="grey">Abu-abu</string>
    <string name="black">Hitam</string>
    <string name="dummy_title_story">Gajah dan Kumbang</string>
    <string name="desc_cover_path">gambar cerita</string>
    <string name="play_all">Putar</string>
    <string name="dummy_sentence">Beruang itu mulai mengendus-endus dengan hati-hati di sekitar pohon tumbang.</string>
    <string name="desc_play_sentence">putar kalimat</string>
    <string name="label_word">Kata</string>
    <string name="label_syllables">Suku kata</string>
    <string name="label_letter">Huruf</string>
    <string name="word_order">Susun Kata</string>
    <string name="level">Level</string>
    <string name="title_level">Level %s</string>
    <string name="stages">%s/%s</string>
    <string name="desc_before_stage">Tahap sebelumnya</string>
    <string name="desc_after_stage">Tahap selanjutnya</string>
    <string name="desc_play_word">putar suara</string>
    <string name="word_check">Periksa</string>
    <string name="dummy_char">A</string>
    <string name="wrong">Waduh!</string>
    <string name="wrong_answer">Jawaban kamu kurang tepat</string>
    <string name="try_again">Ulangi</string>
    <string name="about_application">Tentang Aplikasi</string>
    <string name="deskripsi_umum">Deskripsi Umum</string>
    <string name="general_description_of_alpaca">Aplikasi ini membantu pengguna dengan disleksia untuk dapat membaca dengan cara yang lebih nyaman.\n\nAplikasi ini dapat mengubah tulisan pada suatu objek yang ditangkap oleh kamera dan mengubahnya menjadi sebuah tulisan yang dapat dikustomisasi berdasarkan preferensi pengguna. Selain itu terdapat fitur lain seperti layanan text-to-speech dan permainan.</string>
    <string name="alpaca_desciription">Alpaca - Aplikasi untuk Membantu Membaca, Mengeja, dan Menulis.</string>
    <string name="main_feature">Fitur Utama</string>
    <string name="deteksi_tulisan_pada_objek_dengan_bantuan_kamera">Deteksi tulisan pada objek dengan bantuan kamera.</string>
    <string name="dengan_bantuan_alat_pendeteksi_tulisan_ocr_pengguna_dapat_mengambil_gambar_dari_berbagai_macam_objek_dan_menyimpannya_ke_dalam_perpustakaan_pribadi">Dengan bantuan alat pendeteksi tulisan (OCR) pengguna dapat mengambil gambar dari berbagai macam objek dan menyimpannya ke dalam perpustakaan pribadi.</string>
    <string name="ocr_description">Pengguna dapat mengatur gaya tulisan pada halaman baca, mulai dari ukuran font, warna latar belakang, alignment text, hingga line spacing dan line height. Dengan fitur ini, pengguna dapat melakukan eksplorasi untuk menemukan gaya tulisan yang paling nyaman.</string>
    <string name="tts_service_title">Layanan text-to-speech pada halaman baca.</string>
    <string name="text_style_title">Sesuaikan gaya tulisan pada halaman baca.</string>
    <string name="tts_description">Layanan text-to-speech dapat membantu pengguna untuk mengetahui cara pelafalan dari suatu kata atau kalimat dari sebuah cerita.</string>
</resources>