<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/arrow_down"
        android:src="@drawable/ic_baseline_arrow_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Theme.Alpaca.Text.Title.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/background"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/bg_white"
            style="@style/Theme.Alpaca.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            app:chipIcon="@drawable/ic_baseline_circle_24"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/bg_white"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bg_warm"
            style="@style/Theme.Alpaca.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            app:chipIcon="@drawable/ic_baseline_circle_24"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/bg_warm"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bg_blue"
            style="@style/Theme.Alpaca.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            app:chipIcon="@drawable/ic_baseline_circle_24"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/bg_blue"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bg_grey"
            style="@style/Theme.Alpaca.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grey"
            app:chipIcon="@drawable/ic_baseline_circle_24"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/bg_dark"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bg_black"
            style="@style/Theme.Alpaca.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black"
            app:chipIcon="@drawable/ic_baseline_circle_24"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/bg_black"
            app:chipIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/chipGroup"
        app:layout_constraintStart_toStartOf="@+id/chipGroup"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>