<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.forgotpassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo3"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/desc_alpaca_logo"
            android:src="@drawable/logo_alpaca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_forgot_pw1"
            style="@style/Theme.Alpaca.Text.Headline.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/find_account"
            app:layout_constraintEnd_toEndOf="@+id/img_logo3"
            app:layout_constraintStart_toStartOf="@+id/img_logo3"
            app:layout_constraintTop_toBottomOf="@id/img_logo3" />

        <TextView
            android:id="@+id/tv_forgot_pw2"
            style="@style/Theme.Alpaca.Text.Body.Medium.Auth"
            android:layout_marginTop="4dp"
            android:text="@string/input_your_email_to_find"
            app:layout_constraintEnd_toEndOf="@+id/img_logo3"
            app:layout_constraintStart_toStartOf="@+id/img_logo3"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_pw1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_forgot_password"
            style="@style/Theme.Alpaca.InputLayout.Auth"
            android:layout_marginTop="32dp"
            android:hint="@string/label_email"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@+id/img_logo3"
            app:layout_constraintStart_toStartOf="@+id/img_logo3"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_pw2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_process_next"
            style="@style/Theme.Alpaca.Button.Auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/label_process"
            app:layout_constraintEnd_toEndOf="@+id/img_logo3"
            app:layout_constraintStart_toStartOf="@+id/img_logo3"
            app:layout_constraintTop_toBottomOf="@+id/til_email_forgot_password" />

        <LinearLayout
            android:id="@+id/liner_layout_forgot_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/img_logo3"
            app:layout_constraintStart_toStartOf="@+id/img_logo3"
            app:layout_constraintTop_toBottomOf="@+id/btn_process_next">

            <TextView
                style="@style/Theme.Alpaca.Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/account_ready" />

            <TextView
                android:id="@+id/btn_to_login_from_forgot_password"
                style="@style/Theme.Alpaca.Text.Body.Small.Button"
                android:text="@string/label_login" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_layout_forgot_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/img_logo3"
            app:layout_constraintStart_toStartOf="@+id/img_logo3"
            app:layout_constraintTop_toBottomOf="@+id/liner_layout_forgot_password1">

            <TextView
                style="@style/Theme.Alpaca.Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/no_account_ready" />

            <TextView
                android:id="@+id/btn_to_registration_from_forgot_password"
                style="@style/Theme.Alpaca.Text.Body.Small.Button"
                android:text="@string/label_registration" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>